# perenne

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DEMO.md  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: pages.yml
arch/riscv64/: Cargo.toml
docs/: glossary.md
docs/architecture/: hardware-abstraction.md  overview.md  security-model.md  self-healing.md  showcase.md
docs/decisions/: 0001-language-rust.md  0002-microkernel.md  0003-first-target-riscv.md  0004-post-quantum-crypto.md  0005-self-healing-knowledge-organism.md  0006-project-name-placeholder.md  0007-extensibility-user-space-components.md  0008-project-name-perenne.md  README.md
docs/design/: README.md
docs/learning/: 0001-dev-environment.md  0002-boot-and-hello-world.md  0003-traps-and-interrupts.md  0004-memory-and-paging.md  0005-scheduling-and-context-switching.md  0006-user-mode-and-syscalls.md  0007-user-scheduling.md  0008-address-space-isolation.md  0009-capabilities-and-ipc.md  0010-post-quantum-crypto.md  0011-device-tree.md  0012-uart-console.md  0013-first-user-space-component.md  0014-self-healing-diagnosis.md  0015-self-healing-the-caged-fix.md  0016-virtio-rng-entropy.md  0017-call-reply-ipc.md  0018-kernel-entropy-pool.md  0019-getrandom-service.md  0020-plic-interrupts.md  0021-reply-capabilities.md  0022-block-storage.md  0023-minimal-filesystem.md  0024-living-knowledge-base.md  0025-write-back-learning-organism.md  0026-capability-delegation.md  0027-interactive-shell.md  0028-revisable-kb.md  0029-counter-driven-escalation.md  0030-quarantine-on-escalation.md  0031-capability-revocation.md  0032-encrypted-ipc-channel.md  0033-virtio-net-arp.md  0034-user-space-nic.md  0035-ip-udp-dhcp.md  0036-dhcp-lease-adopt.md  0037-icmp-ping.md  0038-inbound-ping-reply.md  0039-dns-resolution.md  (+1 more)
hal/: Cargo.toml
kernel/: Cargo.toml  build.rs  kernel.ld
knowledge-base/: README.md
libs/crypto/: Cargo.toml
libs/crypto/src/: lib.rs
services/: .gitkeep
site/: app.js  index.html  styles.css
tests/: .gitkeep
tools/: README.md  build.ps1  check-references.ps1  run-qemu.ps1  test-qemu.ps1
(+170 files in other folders)
