[package]
name = "kernel-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ml-kem = { version = "0.3.2", default-features = false }
rand_chacha = { version = "0.10.0", default-features = false }
rand_core = { version = "0.10.1", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
